--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title></title><link rel="canonical" href=""/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=" /></head></html>
+<!DOCTYPE html><html><head><title>https://naughtymonsta.com</title><link rel="canonical" href="https://naughtymonsta.com"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://naughtymonsta.com" /></head></html>
