--- a/the-stories-of-us/stories/index.html
+++ b/the-stories-of-us/stories/index.html
@@ -8,7 +8,7 @@
 		<title> - Naughty Monsta</title>
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="favicon.png">
+	<link rel="icon" href="https://naughtymonsta.comfavicon.png">
 
 	
 		
@@ -23,7 +23,7 @@
 		<meta property="og:title" content=" - Naughty Monsta" />
 		<meta property="og:locale" content="en_US" />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="/the-stories-of-us/stories/" />
+		<meta property="og:url" content="https://naughtymonsta.com/the-stories-of-us/stories/" />
 		<meta property="og:site_name" content="Naughty Monsta 👻" />
 		
 			<meta property="og:image" content="https://source.unsplash.com/UtYeVlBNCCA/1600x900" />
@@ -50,7 +50,7 @@
 		
 			<meta name="twitter:image" content="https://source.unsplash.com/UtYeVlBNCCA/1600x900" />
 		
-		<meta name="twitter:url" content="/the-stories-of-us/stories/" />
+		<meta name="twitter:url" content="https://naughtymonsta.com/the-stories-of-us/stories/" />
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:site" content="@adamliuio" />
 		<meta name="twitter:creator" content="@adamliuio" />
